--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ fs-err = { version = "3.1.3", features = ["tokio"] }
 futures = "0.3.31"
 globset = { version = "0.4.18", features = ["serde1"] }
 image = "0.25.8"
-indicatif = "=0.17.11"
+indicatif = "0.18.1"
 indicatif-log-bridge = "0.2.3"
 log = "0.4.28"
 rbx_binary = { version = "2.0.0", features = ["serde"] }
