--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ roblox_install = "1.0.0"
 schemars = "1.0.4"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["full"] }
 toml = "0.9.8"
 walkdir = "2.5.0"
