--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ anyhow = "1.0.100"
 bit-vec = "0.8"
 blake3 = "1.8.2"
 bytes = "1.10.1"
-clap = { version = "4.5.50", features = ["derive"] }
+clap = { version = "4.5.50", features = ["derive", "env"] }
 clap-verbosity-flag = "3.0.4"
 dashmap = "6.1.0"
 dotenvy = "0.15.7"
