--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,10 +44,10 @@ toml = "0.9.8"
 walkdir = "2.5.0"
 
 [dev-dependencies]
+assert_cmd = "2.1.1"
+assert_fs = "1.1.3"
 insta = { version = "1.43.2", features = ["yaml"] }
-
-[features]
-mock_cloud = []
+predicates = "3.1.3"
 
 [profile.dev.package]
 insta.opt-level = 3
