--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ relative-path = { version = "2.0.1", features = ["serde"] }
 reqwest = { version = "0.13.1", default-features = false, features = [
   "gzip",
   "multipart",
+  "rustls",
 ] }
 resvg = "0.45.1"
 roblox_install = "1.0.0"
